fix doodlejump.css. correct sizes

--- a/styles/doodlejump.css
+++ b/styles/doodlejump.css
@@ -18,8 +18,9 @@ body {
 #top-bar {
   position: absolute;
   width: 100%;
-  height: 55px;
-  background-color: #c7e0f7b0;
+  height: 8.2%;
+  background-color: #d3e6f8b0;
+  border-bottom: 2.5px solid rgba(113, 112, 112, 0.5);
 }
 
 #top-bar-content {
@@ -31,9 +32,9 @@ body {
 }
 
 #score {
-  margin-left: 10px;
-  font-size: 30px;
-  font-weight: bold;
+  margin-left: 13px;
+  margin-bottom: 5px;
+  font-size: 36px;
   user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
